--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     strategy:
       fail-fast: false
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
 
@@ -62,4 +62,3 @@ jobs:
           REPO: self
           BRANCH: gh-pages
           FOLDER: docs/_build/html
-
