--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -6,22 +6,14 @@ on:
 
 jobs:
   linux-gcc-x64:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [13]
+        version: [13, 14]
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
       - uses: seanmiddleditch/gha-setup-ninja@v4
-
-      - name: Install Toolchains PPA
-        run: |
-          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-          sudo apt-get -y update
-
-      - name: Install GCC
-        run: sudo apt-get -y install gcc-${{matrix.version}} g++-${{matrix.version}}
 
       - name: Install XMake
         run: |
@@ -62,7 +54,7 @@ jobs:
           xrepo install -y --toolchain=gcc-${{matrix.version}} --configs="hyperion_enable_tracy=true,hyperion_enable_testing=true" "hyperion_std ${{ steps.extract_branch.outputs.branch }}"
 
   linux-clang-x64:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         version: [16, 17, 18]
@@ -77,15 +69,13 @@ jobs:
           sudo apt-get -y update
           sudo apt-get -y install xmake
 
-      - name: Install LLVM and Clang
-        run: |
-          wget https://apt.llvm.org/llvm.sh
-          chmod +x llvm.sh
-          sudo ./llvm.sh ${{matrix.version}}
-          sudo apt-get -y install clang-tidy-${{matrix.version}}
-
       - name: Replace clang-tidy
-        run: sudo cp /usr/bin/clang-tidy-${{matrix.version}} /usr/bin/clang-tidy -f
+        run: |
+          if [[ "$(realpath --canonicalize-existing /usr/bin/clang-tidy-${{matrix.version}})"
+              != "$(realpath --canonlicalize-existing /usr/bin/clang-tidy)"
+          ]]; then
+            sudo cp /usr/bin/clang-tidy-${{matrix.version}} /usr/bin/clang-tidy -f
+          fi
 
       - name: Configure
         working-directory: ${{github.workspace}}
