--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -71,8 +71,8 @@ jobs:
 
       - name: Replace clang-tidy
         run: |
-          if [[ "$(realpath --canonicalize-existing /usr/bin/clang-tidy-${{matrix.version}})"
-              != "$(realpath --canonlicalize-existing /usr/bin/clang-tidy)"
+          if [[ "$(realpath --canonicalize-existing /usr/bin/clang-tidy-${{matrix.version}})" \
+              != "$(realpath --canonlicalize-existing /usr/bin/clang-tidy)" \
           ]]; then
             sudo cp /usr/bin/clang-tidy-${{matrix.version}} /usr/bin/clang-tidy -f
           fi
